# scitex-clew

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: cla.yml  dep-hygiene-smoke.yml  import-smoke-on-ubuntu-py3-12.yml  newb-docs-quality-on-ubuntu-latest.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-clew-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/clew/runtime/: README.md
.scitex/dev/: cli-audit-dict.yaml  config.yaml
docs/: v2_design.md
docs/sphinx/: cli.rst  concepts.rst  conf.py  examples.rst  grouping.rst  index.rst  installation.rst  mcp.rst  quickstart.rst  verify-claim-contract.rst
docs/sphinx/api/: scitex_clew.rst
examples/: 00_run_all.sh  01_basic_verification.py  02_chain_verification.py  03_mermaid_diagram.py  README.md
examples/01_basic_verification_out/: status_report.txt
examples/02_chain_verification_out/: chain_report.txt
examples/03_mermaid_diagram_out/: dag.mmd
examples/multi_parent/: 00_run_all.sh  01_generate_subjects.py  02_generate_stimuli.py  03_run_experiment.py  04_load_covariates.py  05_analyze_behavior.py  06_analyze_neural.py  07_merge_results.py  08_make_figures.py  09_verify_dag.py
examples/sequential/: 01_source_a.py  02_preprocess_a.py  03_source_b.py  04_preprocess_b.py  05_source_c.py  06_preprocess_c.py  07_merge.py  08_analyze.py  09_demo_verification.py  10_programmatic_verification.py
src/scitex_clew/: README.md  __init__.py  _archive_lookup.py  _chain.py  _claim.py  _config.py  _dag.py  _db.py  _db_parents.py  _estimate.py  _examples.py  _hash.py  _linter_plugin.py  _logging.py  _public_api.py  _registry.py  _rerun.py  _stamp.py  _tracker.py  _visualize.py
src/scitex_clew/_attest/: __init__.py  _registry.py  _stamp.py
src/scitex_clew/_chain/: __init__.py  _archive_lookup.py  _chain_ops.py  _dag.py  _freshness.py  _hash_cache.py  _routes.py  _types.py  _verify_ops.py
src/scitex_clew/_citation/: __init__.py  _api.py  _heuristics.py  _ingest.py  _model.py
src/scitex_clew/_claim/: __init__.py  _export.py  _manuscript.py  _model.py  _mutate.py  _register.py  _verify.py
src/scitex_clew/_claims/: __init__.py  _dag.py  _db_ops.py  _export.py  _format.py  _types.py  _verify.py
src/scitex_clew/_cli/: __init__.py  _citation.py  _claim.py  _claim_mutate.py  _estimate.py  _exit_codes.py  _export.py  _hash.py  _introspect.py  _main.py  _mcp.py  _stamp.py  _verification.py  _verification_core.py  _verification_dag.py  _verification_mermaid.py
src/scitex_clew/_core/: __init__.py  _convenience.py  _logging.py  _public_api.py
src/scitex_clew/_db/: __init__.py  _chain.py  _core.py  _file_hashes.py  _parents.py  _queries.py
src/scitex_clew/_example_data/multi_parent/: 01_generate_subjects.py  02_generate_stimuli.py  03_run_experiment.py  04_load_covariates.py  05_analyze_behavior.py  06_analyze_neural.py  README.md  (+3 more)
src/scitex_clew/_groupers/: __init__.py  _base.py  _builtins.py  _spec.py
src/scitex_clew/_mcp/: __init__.py  server.py
src/scitex_clew/_observers/: __init__.py  _session.py
src/scitex_clew/_overlay/: __init__.py  _datasets.py  _json_io.py  _migrations.py  _models.py  _overlays.py  _validate.py  _verify.py
src/scitex_clew/_sphinx_html/: .buildinfo  cli.html  concepts.html  examples.html  genindex.html  grouping.html  index.html  installation.html  mcp.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
src/scitex_clew/_viz/: __init__.py  _colors.py  _image.py  _image_dag.py  _image_layout.py  _image_palette.py  _json.py  _mermaid.py  _mermaid_dag.py  _mermaid_nodes.py
src/scitex_clew/skills/: SKILL.md  cli-commands.md  common-workflows.md  mcp-tools-for-ai-agents.md  quick-start.md
tests/: conftest.py  test__api.py  test__chain.py  test__cli.py  test__db.py  test__examples.py  test__hash.py  test__logging.py  test__mcp_tools.py  test__node_class.py  test__registry.py  test__rerun.py  test__stamp.py  test__tracker.py  test__viz.py
tests/develop/: test_audit.py
tests/examples/: test_01_basic_verification.py  test_02_chain_verification.py  test_03_mermaid_diagram.py  test_examples_smoke.py
tests/integration/: test_api.py  test_cli.py  test_cli_claim_hash_stamp.py  test_cli_verification_rerun_chain.py  test_cli_verify_fail_loud.py  test_cross_package_imports.py  test_dag_strict.py  test_mcp_claim_hash_stamp.py  test_mcp_register_intermediate.py  test_mcp_tools.py  test_viz.py
tests/scitex_clew/: test__archive_lookup.py  test__chain.py  test__claim.py  test__claim_verify_all.py  test__config.py  test__estimate.py  test__estimate_phase2.py  test__hash.py  test__logging.py  test__node_class.py  test__overlay__datasets.py  test__overlay__json_io.py  test__overlay__models.py  test__overlay__overlays.py  test__overlay__validate.py  test__overlay__verify.py  test__registry.py  test__rerun.py  test__stamp.py  test__tracker.py  test__verify_all_claims.py  test_export_claims_json.py
tests/scitex_clew/_attest/: test__registry.py  test__stamp.py
tests/scitex_clew/_chain/: test__archive_lookup.py  test__chain_ops.py  test__freshness.py  test__hash_cache.py  test__routes.py  test__types.py  test__verify_ops.py
tests/scitex_clew/_citation/: test__api.py  test__ingest.py
tests/scitex_clew/_claim/: test__manuscript.py  test__register.py
tests/scitex_clew/_cli/: test__citation.py  test__claim.py  test__exit_codes.py  test__export.py  test__introspect.py  test__verification.py  test__verification_image.py
tests/scitex_clew/_core/: test__config.py  test__logging.py  test__node_class.py
tests/scitex_clew/_db/: test__chain.py  test__core.py  test__file_hashes.py  test__parents.py
tests/scitex_clew/_groupers/: test__base.py
tests/scitex_clew/_observers/: test___init__.py
tests/scitex_clew/_viz/: test__colors.py  test__image.py  test__mermaid.py  test__mermaid_nodes_suspect.py
tests/skills/: test_skills_quality.py
(+44 files in other folders)
