[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-clew"
version = "0.7.0"
description = "Verifiable knowledge graph for scientific experiments"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = [
    "reproducibility",
    "verification",
    "hash",
    "dag",
    "provenance",
    "scitex",
    "science",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "scitex-dev>=0.17.8",
    "click>=8.1",
]
[project.optional-dependencies]
all = [
    "click>=8.0.0",
    "fastmcp>=2.0.0",
    "matplotlib",
]
dev = [
    "fastmcp",
    "click>=8.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    # pytest-timeout — CI runs pytest with --timeout=120 (test.yml).
    "pytest-timeout>=2.0",
    "scitex-dev>=0.11.7",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]

[project.scripts]
clew = "scitex_clew._cli._main:main"
scitex-clew = "scitex_clew._cli._main:main"
[project.entry-points."scitex_dev.docs"]
scitex-clew = "scitex_clew"
[project.entry-points."scitex_dev.skills"]
scitex-clew = "scitex_clew"

[project.entry-points."scitex_dev.linter.plugins"]
clew = "scitex_clew._linter_plugin:get_plugin"
[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-clew"
Repository = "https://github.com/ywatanabe1989/scitex-clew"
Documentation = "https://scitex-clew.readthedocs.io"
[tool.hatch.build.targets.wheel]
packages = ["src/scitex_clew"]
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
# Subprocess coverage wiring (skill leaf 05_development_06_subprocess-coverage):
# parallel=true makes every coverage process write to its own
# .coverage.<host>.<pid>.<rand> shard; concurrency covers subprocess.run + threads.
parallel = true
source = ["scitex_clew"]
concurrency = ["multiprocessing", "thread"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]

[tool.scitex_dev.audit]
# PS-168 — Per-package secret + env-var prefix in GitHub Actions workflows.
# `GH_PERSONAL_ACCESS_TOKEN` is the ecosystem-wide cross-cutting PAT used
# by the contributor-assistant CLA action. The natural GITHUB_* namespace
# is reserved by GitHub Actions on the secret-name surface (HTTP 422 on
# every `gh secret set`), so the GH_ shorthand is the canonical
# substitute and is registered ecosystem-wide via PR #122 on scitex-dev
# (EXCEPTION_SECRETS_DEFAULT). This per-package entry pins the same
# exception inline so the audit passes on every scitex-dev version,
# independent of release timing.
ps168_secret_exceptions = ["GH_PERSONAL_ACCESS_TOKEN"]
